<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/toasty_button_error_toast"
            style="@style/DemoButton"
            android:text="@string/toasty_error_toast" />

        <Button
            android:id="@+id/toasty_button_success_toast"
            style="@style/DemoButton"
            android:text="@string/toasty_success_toast" />

        <Button
            android:id="@+id/toasty_button_info_toast"
            style="@style/DemoButton"
            android:text="@string/toasty_info_toast" />

        <Button
            android:id="@+id/toasty_button_info_toast_with_formatting"
            style="@style/DemoButton"
            android:text="@string/toasty_info_toast_with_formatting" />

        <Button
            android:id="@+id/toasty_button_warning_toast"
            style="@style/DemoButton"
            android:text="@string/toasty_warning_toast" />

        <Button
            android:id="@+id/toasty_button_normal_toast_wo_icon"
            style="@style/DemoButton"
            android:text="@string/toasty_normal_toast_without_icon" />

        <Button
            android:id="@+id/toasty_button_normal_toast_w_icon"
            style="@style/DemoButton"
            android:text="@string/toasty_normal_toast_with_icon" />

        <Button
            android:id="@+id/toasty_button_custom_config"
            style="@style/DemoButton"
            android:text="@string/toasty_custom_configuration" />
        <Button
            android:id="@+id/toasty_button_only_show_last"
            style="@style/DemoButton"
            android:text="@string/toasty_custom_show_last" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>