<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        tools:context=".activity.MainActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToasty"
            style="@style/DemoButton"
            android:text="@string/main_toasty" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPhoneRegex"
            style="@style/DemoButton"
            android:text="@string/main_phoneregex" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLanguageChange"
            style="@style/DemoButton"
            android:text="@string/main_language_change"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>