<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:paddingHorizontal="10dp"
        tools:context=".activity.MainActivity">

        <FrameLayout
            android:id="@+id/languageFlAuto"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/bg_language_selector"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_auto"
                android:textSize="26sp"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/languageIvAuto"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/ic_choose"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/languageFlChinese"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/bg_language_selector"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_chinese"
                android:textSize="26sp"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/languageIvChinese"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/ic_choose"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/languageFlEnglish"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/bg_language_selector"
            android:layout_marginBottom="5dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_english"
                android:textSize="26sp"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/languageIvEnglish"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/ic_choose"/>
        </FrameLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>